# wooting-double-movement

./: .gitignore  LICENSE  README.md  electron-builder.yaml  package.json  tsconfig.json  webpack.config.js
public/: index.html
src/: accelerator.ts  common.ts  ipc.ts  main.ts  utils.ts
src/native/: .gitignore  Cargo.toml  index.d.ts  index.js  index.ts  native.d.ts  types.ts
src/native/src/: config.rs  controller.rs  lib.rs  service.rs
src/scripts/: afterPack.js
src/view/: AdvancedSettings.tsx  Announcement.tsx  Components.tsx  Content.tsx  Footer.tsx  Header.tsx  MainWindow.tsx  UpdateNotes.tsx  UpdateToast.tsx  WootSunIcon.tsx  app.tsx  ipc.ts  theme.tsx
src/view/components/: AdvancedSettings.tsx  SimpleEnableCard.tsx  markdown.tsx
src/view/components/AdvancedTabs/: AnalogSettings.tsx  AppSettings.tsx  KeyMapping.tsx  StrafeSettings.tsx  Utils.tsx
src/view/components/AdvancedTabs/Analog/: Index.tsx  JoystickTester.tsx
src/view/components/card/: Card.tsx
src/view/components/general/: Card.tsx  InfoTooltip.tsx
src/view/components/settings/: accelerator.tsx
src/view/components/settings/angle/: AngleControl.tsx  AngleSlider.tsx
src/view/components/settings/key-bind/: KeyBindControl.tsx  KeyBindEditor.tsx
